# wgpu-egui-example

./: .gitignore  Cargo.toml  README.md  copy_pkg.sh
.github/workflows/: web-deploy.yml
src/: background_drawing.rs  gui_drawing.rs  lib.rs  main.rs  simple_color_shader.wgsl  state.rs
web/: copy_pkg.sh  index.html  style.css
