[package]
name = "wgpu-egui-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
egui = "0.20.1"
egui-wgpu = "0.20.0"
egui-winit = "0.20.1"
env_logger = "0.10.0"
oorandom = "11.1.3"
pollster = "0.2.5"
wgpu = "0.14.2"
winit = "0.27.5"
