[package]
name = "wgpu-egui-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
lto = true

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
cfg-if = "1.0.0"
egui = "0.20.1"
egui-wgpu = "0.20.0"
egui-winit = {version = "0.20.1", default-features = false, features = [ "links" ]}
env_logger = "0.10.0"
log = "0.4.17"
oorandom = "11.1.3"
pollster = "0.2.5"
wgpu = "0.14.2"
winit = "0.27.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = {version = "0.20.1", default-features = false, features = ["links", "clipboard"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = {version = "0.14.2", features = ["webgl"]}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3.60", features=["Window", "Document", "Element"]}


# When using wasm-pack wasm-opt segfaults for me
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
